--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.14
 ptyprocess==0.5.1
 Pygments==2.2.0
+requests==2.14.2
 scandir==1.5
 simplegeneric==0.8.1
 six==1.10.0
